--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ body {
   background: #97e7ff;
 }
 
+img { 
+    max-width: 100%; 
+}
+
+
 #nav {
 	position: absolute;
     width: 100%;
@@ -371,11 +376,6 @@ a {
     text-align: left;
 }
 
-@media (max-width: 1050px)
-.contact {
-    width: 49.5%;
-    margin: 0;
-}
 
 .contact {
     display: inline-block;
@@ -442,10 +442,7 @@ a {
     display: inline-block;
 }
 
-@media (max-width: 1050px)
-#submitted {
-    text-align: left;
-}
+
 
 #submitted {
     display: none;
@@ -466,3 +463,18 @@ a {
     font-size: 34px;
 }
 
+/*  Media Queries  */
+
+@media (min-width:320px)  { /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */ }
+@media (min-width:480px)  { /* smartphones, Android phones, landscape iPhone */ }
+@media (min-width:600px)  { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */ }
+@media (min-width:801px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1281px) { /* hi-res laptops and desktops */ }
+
+@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ }
+@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
+@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
+@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1281px) { /* hi-res laptops and desktops */ }
