--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ img {
 #nav {
 	position: absolute;
     width: 100%;
-    height: 65px;
+    height: auto;   /*This*/
     padding-top: 2vh;
     text-align: center;
     background-color: #fff;
@@ -163,37 +163,22 @@ a {
     line-height: 1.5;
 }
 
-@media (max-width: 1050px) {
-#portfolio-section .project {
-    width: 40%;
-	}
-}
 
 #portfolio-section .project {
     width: 38vw;
 
 }
-#profile-photo {
-  width: 18%;
-}
 
 #profile-photo img {
-  display: block;
-  width: 100%;
-}
-
-#profile-photo-mobile {
-  display: none;
-  width: 32%;
-  float: left;
-  margin: 15px 4% 0;
+    display: block;
+    width: 100%;
 }
 
 #portfolio-section {
 	background-color: #fff;
 }
 
-.image-container {
+ .image-container {
     position: relative;
 }
 
@@ -265,11 +250,6 @@ a {
     display: inline-block;
 }
 
-@media (max-width: 1050px) {
-.work-dates {
-    width: 15%;
-	}
-}
 
 .work-dates {
     width: 195px;
@@ -344,26 +324,13 @@ a {
 }
 
 
-<-- -->
-@media (max-width: 1050px) {
 .work .project {
-    width: 63%;
-    padding: 4%;
-	}
+  width: 33%;
+  margin: 0;
+  padding: 2%;
+  color: #7f7f7f;
 }
 
-@media (max-width: 1440px){
-.work .project {
-    width: 42%;
-	}
-}
-
-.work .project {
-    width: 33%;
-    margin: 0;
-    padding: 2%;
-    color: #7f7f7f;
-}
 .work > div {
     display: inline-block;
 }
@@ -471,64 +438,174 @@ a {
 }
 
 /*  Media Queries  */
+@media (max-width: 1440px) {
+  .website-link {
+    margin: 2.5% 0;
+    padding: 5%;
+  }
+  .work .project {
+    width: 42%;
+  }
+}
+@media (max-width: 1050px) {
+  #portfolio-section .project {
+    width: 40%;
+  }
 
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
-/* Styles */
+  .work .project {
+    width: 63%;
+    padding: 4%;
+  }
+
+  .work-dates {
+    width: 15%;
+  }
+
+  .contact {
+    width: 49.5%;
+    margin: 0;
+  }
+
+  #submitted {
+    text-align: left;
+  }
 }
 
-/* Smartphones (landscape) ----------- */
-@media only screen 
-and (min-width : 321px) {
-/* Styles */
+@media (max-width: 750px) {
+  .section-content {
+    padding: 0 10vw;
+  }
+
+  .project {
+    width: 100% !important;
+    margin: 0;
+  }
+
+  .mobile-padding {
+    margin-bottom: 4vh;
+  }
+
+  #hi {
+    font-size: 36px;
+  }
+
+  #profile-photo {
+    display: none;
+  }
+
+  #profile-photo-mobile {
+    display: inline;
+  }
+
+  .work .work-icon, .work .work-dates {
+    display: none;
+  }
+
+  .work-dates2 {
+    display: inline-block;
+    margin: 5px 0;
+    font-size: 18px;
+  }
+
+  #contact {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .contact {
+    width: 100%;
+  }
+
+  #bye .icon {
+    font-size: 28px;
+  }
 }
 
-/* Smartphones (portrait) ----------- */
-@media only screen 
-and (max-width : 320px) {
-/* Styles */
+@media (max-width: 550px) {
+  .section-content {
+    padding: 0 5vw;
+  }
+
+  #nav {
+    height: auto;
+  }
+
+  #logo1 {
+    display: none;
+  }
+
+  #logo2 {
+    display: block;
+    width: 65px;
+    margin: 0 auto;
+    margin-bottom: 1.5vh;
+  }
+
+  #nav a {
+    margin: 0 9px;
+  }
+  #bye {
+    padding: 5vh 0;
+  }
 }
 
-/* iPads (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) {
-/* Styles */
+@media (max-width: 490px) {
+  #contact {
+    margin: 0 0 3vw;
+  }
+
+  .contact:nth-child(1) {
+    width: 100%;
+  }
 }
 
-/* iPads (landscape) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : landscape) {
-/* Styles */
+@media (max-width: 415px) {
+  .section-title p {
+    font-size: 36px;
+  }
+
+  .section-content {
+    padding: 2%;
+    padding-bottom: 15px;
+  }
+
+  #hi {
+    font-size: 28px;
+  }
+
+  #nav a {
+    font-size: 12px;
+  }
+
+  #profile-photo-mobile {
+    width: 48%;
+  }
+
+  .website-link {
+    padding: 5%;
+    margin: 2.5% 0;
+  }
+
+  .employer-name, .title {
+    font-size: 28px;
+  }
+
+  .work-dates2 {
+    font-size: 16px;
+  }
+
+  #linkedIn {
+    padding: 0 4%;
+    text-align: left;
+  }
+
+  .big {
+    font-size: 36px;
+  }
 }
 
-/* iPads (portrait) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : portrait) {
-/* Styles */
-}
-
-/* Desktops and laptops ----------- */
-@media only screen 
-and (min-width : 1224px) {
-/* Styles */
-}
-
-/* Large screens ----------- */
-@media only screen 
-and (min-width : 1824px) {
-/* Styles */
-}
-
-/* iPhone 4 ----------- */
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-/* Styles */
+@media (max-width: 340px) {
+  #nav a {
+    margin: 0 5px;
+  }
 }
