--- a/style.css
+++ b/style.css
@@ -201,6 +201,21 @@ a {
     transition: visibility 0.15s, opacity 0.15s ease-out;
 }
 
+.website-link {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  margin: 6px 0;
+  padding: 12px;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  color: #5a5959;
+  font-size: 16px;
+  text-align: center;
+}
+
+
 .website-link a{
     text-decoration: none;
     cursor: pointer;
@@ -210,6 +225,15 @@ a {
     -ms-transition: color 0.1s ease-in-out;
     -o-transition: color 0.1s ease-in-out;
     transition: color 0.1s ease-in-out;
+}
+
+.website-link > .icon {
+  margin-right: 13px;
+  font-size: 19px;
+}
+
+.website-link > .icon-export {
+  margin-right: 8px;
 }
 
 .website-info:before {
