--- a/style.css
+++ b/style.css
@@ -182,6 +182,11 @@ a {
     position: relative;
 }
 
+.image-container:hover .website-info, .image-container.hovering .website-info {
+  visibility: visible;
+  opacity: 1;
+}
+
 .website-info {
     position: absolute;
     top: 0;
@@ -201,7 +206,7 @@ a {
     transition: visibility 0.15s, opacity 0.15s ease-out;
 }
 
-.website-link {
+.  {
   position: relative;
   display: inline-block;
   width: 100%;
