--- a/style.css
+++ b/style.css
@@ -629,6 +629,13 @@ a {
   .employer-name, .title {
     font-size: 28px;
   }
+	
+ .title {
+    color: #5a5959;
+    font-size: 30px;
+    width: 100%;
+    margin: 15px;
+  }
 
   .work-dates2 {
     font-size: 16px;
