--- a/style.css
+++ b/style.css
@@ -220,6 +220,19 @@ a {
   text-align: center;
 }
 
+.website-link {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    margin: 6px 0;
+    padding: 12px;
+    border-radius: 4px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+    color: #5a5959;
+    font-size: 16px;
+    text-align: center; 
+}
 
 .website-link a{
     text-decoration: none;
