--- a/style.css
+++ b/style.css
@@ -191,7 +191,6 @@ a {
     top: 0;
     left: 0;
     z-index: 1;
-    visibility: hidden;
     opacity: 0;
     width: 100%;
     height: 100%;
@@ -222,6 +221,10 @@ a {
   margin-right: -0.25em;
   height: 100%;
   content: '';
+}
+
+.wesbite-info:hover {
+  opacity: 1;
 }
 
 .centered {
