--- a/style.css
+++ b/style.css
@@ -369,6 +369,33 @@ a {
     margin-top: 30px;
 }
 
+.subbutton {
+ display:inline-block;
+ padding:0.35em 1.2em;
+ border:0.1em solid #61cae9;
+ margin:0 0.3em 0.3em 0;
+ border-radius:0.12em;
+ box-sizing: border-box;
+ text-decoration:none;
+ font-family:'Roboto',sans-serif;
+ font-weight:300;
+ color:#61cae9;
+ text-align:center;
+ transition: all 0.2s;
+}
+
+.subbutton:hover{
+ color:#000000;
+ background-color:#FFFFFF;
+}
+
+@media all and (max-width:30em){
+ .subbutton{
+  display:block;
+  margin:0.4em auto;
+ }
+}
+
 .input {
     width: 100%;
     padding: 10px;
