--- a/style.css
+++ b/style.css
@@ -186,8 +186,8 @@ a {
     position: relative;
 }
 
-.website-info {
-    position: absolute;
+..website-info {
+  position: absolute;
     top: 0;
     left: 0;
     z-index: 1;
@@ -195,7 +195,6 @@ a {
     opacity: 0;
     width: 100%;
     height: 100%;
-    border-radius: 4px 4px 0 0;
     background-color: rgba(75, 75, 75, 0.5);
     text-align: center;
     -webkit-transition: visibility 0.15s, opacity 0.15s ease-out;
@@ -203,18 +202,7 @@ a {
     -ms-transition: visibility 0.15s, opacity 0.15s ease-out;
     -o-transition: visibility 0.15s, opacity 0.15s ease-out;
     transition: visibility 0.15s, opacity 0.15s ease-out;
-}
-
-.website-link a{
-    text-decoration: none;
-    cursor: pointer;
-    color: #5a5959;
-    -webkit-transition: color 0.1s ease-in-out;
-    -moz-transition: color 0.1s ease-in-out;
-    -ms-transition: color 0.1s ease-in-out;
-    -o-transition: color 0.1s ease-in-out;
-    transition: color 0.1s ease-in-out;
-}
+} 
 
 .website-info:before {
   display: inline-block;
@@ -224,9 +212,29 @@ a {
   content: '';
 }
 
-.wesbite-info:hover {
-  visibility: visible;
-  opacity: 1;
+.website-link {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  margin: 6px 0;
+  padding: 12px;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  color: #5a5959;
+  font-size: 16px;
+  text-align: center;
+}
+ 
+.website-link a {
+  text-decoration: none;
+  cursor: pointer;
+  color: #5a5959;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+  -ms-transition: all 0.1s ease-in-out;
+  -o-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
 }
 
 .centered {
