--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ a {
     padding: 1.5%;
 }
 
-/*#about a, #submitted a, #linkedIn a {
+/*#about a, #butmitted a, #linkedIn a {
   border-bottom: 1px solid #5a5959;
 }
 
@@ -396,6 +396,7 @@ a {
  color:#61cae9;
  text-align:center;
  transition: all 0.2s;
+ cursor: pointer;
 }
 
 .subbutton:hover{
